test/fail/actor-reference.mo
// actor references

ignore (actor "IC:C0FEFED00D41" : ());  // must be actor type

ignore (actor (45) : actor {});  // argument must be text type
